--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,10 @@
 
-/* Retira qualquer formatação pré iniciada */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-
-/* Formatações padrão da página */
 body {
   margin: 0;
   padding: 0;
@@ -16,8 +13,6 @@ body {
   background: #DEB887;
   }
 
-
-/* Formatação logo e nome (seperior esquerdo) */
 h1 {
   margin: 10px 0;
   font-size: 40px;
@@ -25,21 +20,31 @@ h1 {
   font-weight: 300;
 }
 
+h2 {
+  margin: 10px 0;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 300;
+}
 
-/* Formatação links */
+h3 {
+  margin: 5px 0;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 300;
+}
+
 a {
   color: #000;
   text-decoration: none;
 }
 
-/* Formatação das classes container */
 .container {
   max-width: 1200px;
   background: #fff;
   margin: 0 auto;
 }
 
-/* Formatação das classes nav */
 .nav {
   background: #6b0d20;
   color: #fff;
@@ -47,14 +52,13 @@ a {
   display:flex;
 }
 
-/* Formatação nome (superior esquerdo) */
 .nav .logo {
   width: 150px;
   background: #eb1d47;
   text-align: center;
 }
 
-/* Formatação área dedicada à links */
+
 .nav ul {
   list-style: none;
   -webkit-flex:1;
@@ -63,7 +67,6 @@ a {
   display:flex;
 }
 
-/* Formatação dos campos onde serão adicionados os links */
 .nav ul li {
   display: inline-block;
   padding: 20px 10px;
@@ -77,7 +80,6 @@ a {
   text-align: center;
 }
 
-/* Formatação dos campos referente aos links (quando o mouse posicionar-se em cima)  */
 .nav ul li:hover {
   background: #ab1534;
   transition:All .5s ease;
@@ -86,29 +88,26 @@ a {
   -o-transition:All .5s ease;
 }
 
-/* Formatação links */
 .nav ul li a {
   color: #fff;
 }
 
-/* Formatação dos links (quando o mouse posicionar-se em cima)*/
 .nav ul li:hover a {
   border-bottom: 1px solid #eb1d47;
 }
 
-/* Formatação campo vazio(superior direito) */
 .nav .menub {
   width: 60px;
   background: #eb1d47;
 }
 
-/* Formatação logo*/
 h1.title {
   text-align: center;
   margin: 20px;
+  font-size: 80px;
+  font-family: fantasy;
 }
 
-/* Formatação e posicionamento da imagem da homePage */
 .header-img {
   background: url(http://adorocomer.com/wp-content/uploads/2012/10/restaurante-a-la-carte-restaurante-chique.jpg);
   background-size: cover;
@@ -120,39 +119,33 @@ h1.title {
   margin-bottom: 20px;
 }
 
-/* Formatação padrão sub-títulos */
 .menup{
     font-weight: bolder;
     font-size: 50px;
 }
 
-/* Formatação parágrafos da homePage */
 .phome{
     margin-top: 10px;
     font-size: 20px;
 }
 
-/* Formatação padrão para as classes content */
 .content {
   border-right: 1px solid #9f9f9f;
   padding: 10px;
   margin-right: 10px;
 }
 
-/* Formatação padrão para os fieldsets */
 fieldset{
     width: 300px auto;
     border: 2px solid #6b0d20; 
 }
 
-/* Formatação padrão para os labels */
 label{
     margin-left: 5px;
     display: block;
     margin-bottom: 10px;
 }
 
-/* Formatação padrão dos inputs texto e senha */
 [type=text],
 [type=password]{
     width: 98%;
@@ -161,7 +154,6 @@ label{
     outline: none;
 }
 
-/* Formatação do botão da homePage (Entrar) */
 .initButton {
     background: white;
     border: 2px solid #62B7FF;
@@ -170,18 +162,63 @@ label{
     float: right;
 }
 
-/* Formatação do tipo texto (quando o mouse estiver posicionado em cima)*/
 [type=text]:hover{
     background: #CCC;
 }
 
-/* Formatação rodapé (copyrighy)*/
 .footer {
   background: #6b0d20;
   color: #fff;
   margin-top: 60px;
 }
 
+.footer ul.social {
+  background: #eb1d47;
+}
+
+.footer ul.social li {
+  display: inline-block;
+  padding: 20px 10px;
+  margin: 0;
+  transition:All .5s ease;
+  -webkit-transition:All .5s ease;
+  -moz-transition:All .5s ease;
+  -o-transition:All .5s ease;
+  -webkit-flex:1;
+  flex:1;
+  text-align: center;
+}
+
+.footer ul.social li:hover {
+  background: #ab1534;
+  transition:All .5s ease;
+  -webkit-transition:All .5s ease;
+  -moz-transition:All .5s ease;
+  -o-transition:All .5s ease;
+}
+
+.footer ul.social li a {
+  color: #fff;
+}
+
+.footer ul.social li:hover a {
+  border-bottom: 1px solid #eb1d47;
+}
+
+
+.footer ul {
+  list-style: none;
+  display:-webkit-flex;
+  display:flex;
+}
+
+.footer ul li a {
+  color: #fff;
+}
+
+.footer ul li:hover a {
+  border-bottom: 1px solid #eb1d47;
+}
 
 @media screen and (min-width:800px) {
   .content-box {
@@ -218,47 +255,93 @@ label{
   }
 }
 
-
-/* Formatação conteúdo Dúvidas freq. */
 .contentDuv{
     margin-left: 20px;    
 }
 
-/* Formatação form Cadastrar */
 .register{
     margin: 40px auto;
     border: 3px solid #000;
     width: 500px;
 }
 
-/* Formatação botoões Cadastrar */
 .regButton{
     display:inline-block;
     margin-left: 135px;
 }
 
-
-/* Formatação área busca (userScren) */
 .search{
     width: 400px;
     margin-left: 700px;
     margin-top: -55px;
 }
 
-/* Formatação botão Buscar (userScreen) */
 .searchbutton{
     width: 50px;
     margin-left: 337px;
 }
 
-/* Formatação div esquerda (área usuário) */
 .userInit{
     width:600px;
     margin-top: 150px;
 }
 
-/* Formatação img usuário*/
 .userImg{
     width: 150px;
     margin-top: 10px auto;
 }
+
+#mapa { 
+	width: 940px;
+	height: 400px;
+	border: 10px solid #ccc;;
+	margin-bottom: 20px;
+}
+
+section {
+	padding:10px;
+}
+
+section dl {
+	width: 340px;
+	height: 100px;
+	border: 2px solid #6b0d20;
+	float: left;
+	margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+section dd {
+    border-bottom: 1px solid black;
+}
+
+.saveButton{
+    margin-left: 540px;
+}
+
+table
+{
+  width:50%;
+  margin-left:auto;
+  margin-right:auto;
+}
+
+caption
+{
+  font-size:2em;
+  margin-bottom:1em;
+}
+
+thead th{
+  text-align: left;
+  border-bottom:2px solid #bbb;
+}
+
+tbody td{
+  border-bottom:1px solid #bbb;
+}
+
+tfoot tr td{
+  text-align:center;
+}
+
