Confirm the link of the image of the index

--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ h1.title {
 
 /* Formatação e posicionamento da imagem da homePage */
 .header-img {
-  background: url(http://adorocomer.com/wp-content/uploads/2012/10/restaurante-a-la-carte-restaurante-chique.jpg);
+  background: url(http://inscricoes2016.com.br/wp-content/uploads/2016/02/melhores-restaurantes-sp-2016.jpg);
   background-size: cover;
   background-position: center 80%;
   width: 100%;
